# Snek

./: .gitignore  CMakeLists.txt  CMakeListsWeb.txt  DEPLOY.md  DEPLOY_VERCEL.md  QUICK_DEPLOY.md  README.md  run.sh  setup-and-build-web.sh  vercel.json
.github/workflows/: build.yml
scripts/: build-static.sh  build-web.sh  create-web-version.sh  deploy-macos.sh  deploy-simple.sh  find-sounds-path.cpp
src/: game_logic.cpp  game_logic.h  game_state.cpp  game_state.h  game_types.h  main.cpp  renderer.cpp  renderer.h
web/: README.md  snake.html
